--- a/MediaPlayerDemo/AndroidManifest.xml
+++ b/MediaPlayerDemo/AndroidManifest.xml
@@ -18,14 +18,21 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:name=".TVListActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:label="@string/app_name" >
         </activity>
 
         <!-- Don't forgot InitActivity -->
